Update group功能
