# docs/swagger.yaml
@@ -148,6 +148,15 @@ definitions:
     x-enum-varnames:
     - ClusterScope
     - NamespaceScope
+  model.UpdatedGroup:
+    properties:
+      describe:
+        type: string
+      name:
+        type: string
+      updaterId:
+        type: integer
+    type: object
   model.UpdatedUser:
     properties:
       email:
@@ -315,6 +324,39 @@ paths:
       security:
       - JWT: []
       summary: Get group | 获取 group
+      tags:
+      - group
+    put:
+      consumes:
+      - application/json
+      description: Update group and storage | 修改group和保存
+      parameters:
+      - description: group info
+        in: body
+        name: group
+        required: true
+        schema:
+          $ref: '#/definitions/model.UpdatedGroup'
+      - description: group id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/common.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/model.Group'
+              type: object
+      security:
+      - JWT: []
+      summary: Update group | 修改 group
       tags:
       - group
   /api/v1/operations:
